# coveragecontrol_sim

./: CMakeLists.txt  README.md  package.xml
config/: env_params.yaml  node_params.yaml  sample.idf  sample.pos
include/coveragecontrol_sim/: sim.hpp
src/: coveragecontrol_sim.cpp
